# hdcd-telegram

./: Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml  release.yml
src/: claude_session.rs  fs_perms.rs  lib.rs  main.rs  token.rs
src/router/: config.rs  mailbox.rs  main.rs  mod.rs  sessions.rs  topics.rs
src/telegram/: access.rs  api.rs  handlers.rs  mod.rs  permission.rs  polling.rs  tools.rs  transcribe.rs  types.rs
tests/: router_ipc_test.rs
